// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review wrapper component renders properly if a delete handler is provided 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen ds-u-margin-top--2"
    >
      <React.Fragment>
        <Button
          aria-label="Delete"
          className="ds-u-color--error"
          component="button"
          onClick={[Function]}
          size="small"
          type="button"
          variation="transparent"
        >
          Delete
        </Button>
      </React.Fragment>
    </div>
  }
  editText="Edit"
  headingLevel="3"
>
  Hello
</Review>
`;

exports[`Review wrapper component renders properly if an edit handler is supplied 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen ds-u-margin-top--2"
    >
      <Button
        aria-label="Edit"
        component="button"
        onClick={[Function]}
        size="small"
        type="button"
        variation="transparent"
      >
        Edit
      </Button>
    </div>
  }
  editText="Edit"
  headingLevel="3"
>
  Hello
</Review>
`;

exports[`Review wrapper component renders properly if only the required props are set 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen ds-u-margin-top--2"
    />
  }
  editText="Edit"
  headingLevel="3"
>
  Hello
</Review>
`;

exports[`Review wrapper component renders properly if the edit link and edit handler are both omitted 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen ds-u-margin-top--2"
    />
  }
  editText="Edit"
  headingLevel="3"
>
  Hello
</Review>
`;

exports[`Review wrapper component renders properly if the edit link is set 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen ds-u-margin-top--2"
    >
      <Button
        aria-label="Edit"
        component="button"
        onClick={[Function]}
        size="small"
        type="button"
        variation="transparent"
      >
        <Link
          to="something"
        >
          Edit
        </Link>
      </Button>
    </div>
  }
  editText="Edit"
  headingLevel="3"
>
  Hello
</Review>
`;
